--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<div id="yellow">Paragraph-1</div>
-<div id="red">Paragraph-2</div>
-<div id="green">Paragraph-3</div>
+<p id="yellow">Paragraph-1</p>
+<p id="red">Paragraph-2</p>
+<p id="green">Paragraph-3</p>
 </body>
 
 </html>
